--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.1.2",
+    "next-auth": "^4.0.0-beta.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/react": "17.0.33",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
